--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>LP2851</title>
+    <title>Lucas Phillips - lp2851.github.io</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
